fix composer autoloder

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "autoload": {
     "psr-4": {
-      "Core\\Utils\\": "src"
+      "Core\\OAuth\\": "src"
     }
   },
   "require": {
@@ -14,10 +14,10 @@
     "wumvi/core.utils": "@stable"
   },
   "require-dev": {
-    "phpunit/phpunit": "*",
-    "squizlabs/php_codesniffer": "*",
-    "phpstan/phpstan": "*",
-    "overtrue/phplint": "*"
+    "phpunit/phpunit": "@stable",
+    "squizlabs/php_codesniffer": "@stable",
+    "phpstan/phpstan": "@stable",
+    "overtrue/phplint": "@stable"
   },
   "config": {
     "secure-http": false
