--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "wumvi/core.oauth",
-  "description": "Utils framework",
+  "description": "OAuth library",
   "type": "library",
   "autoload": {
     "psr-4": {
@@ -13,40 +13,11 @@
     "wumvi/core.utils": "@stable",
     "ext-json": "*"
   },
-  "require-dev": {
-    "phpunit/phpunit": "@stable",
-    "squizlabs/php_codesniffer": "@stable",
-    "phpstan/phpstan": "@stable",
-    "overtrue/phplint": "@stable"
-  },
-  "config": {
-    "secure-http": false
-  },
   "authors": [
     {
       "name": "Kozlenko Vitaliy",
       "role": "Developer"
     }
   ],
-  "scripts": {
-    "phpstan": [
-      "vendor/bin/phpstan analyze --level=7 src -c phpstan.neon"
-    ],
-    "phpunit": [
-      "vendor/bin/phpunit"
-    ],
-    "phplint": [
-      "vendor/bin/phplint"
-    ],
-    "phpcs": [
-      "vendor/bin/phpcs src --parallel=10 --runtime-set php_version 71000 -p --standard=ruleset.xml"
-    ],
-    "test": [
-      "@phpstan",
-      "@phpunit",
-      "@phplint",
-      "@phpcs"
-    ]
-  },
   "license": "MIT"
 }
